# METIS

./: .gitignore  LICENSE  README.md  pyproject.toml
src/metis/: config.py  main.py
